django/static/global.css
body{margin:20px auto;max-width:900px;line-height:1.6;font-size:1.125rem;color:#444;padding:0 0.8rem}
h1,h2,h3{line-height:1.2}
.background{background:#000;position:fixed;top:0;right:0;bottom:0;left:0;z-index:-99;}
.video-container,
.background video{position:absolute;top:0;left:0;min-width:100%;min-height:100%;pointer-events:none;object-fit:cover;image-rendering:pixelated;}
.dimmer{position:absolute;background:rgba(0,0,0,0.6);top:0;bottom:0;right:0;left:0;z-index:1;}
.content{position:relative;z-index:2;display:inline-block;}
h1, h2, h3, h4, h5, h6, p, a, ul, label, tr, button{font-family:montserrat, sans-serif;color:#fff;background:#0000;text-decoration:none;}
button{background-color:transparent;border:none;cursor:pointer;padding:0;}
a, button{text-decoration:underline;line-height:1.05;font-size:inherit;}
a img{max-width:150px;margin:auto;padding-bottom:0.4rem;}
thead{text-decoration:underline;text-decoration-color:#fff;}
h1{font-size:225%;letter-spacing:1px;}
h2{font-size:125%;}
h3{font-size:medium;}
ul > li, ul > li:before{content:"- ";text-indent:-5px;list-style-type:none;}
li{padding: 4px;}
a:not(h1 a, p a, .inline-a){padding:20px;display:inline-block;background:rgba(255,255,255,0.1);text-indent:initial;margin-bottom:0.2rem}
#fade{opacity:0.65;}
.navbar div a{font-size:125%;margin:0 3px;}
.navbar div{display:flex;margin-left:auto;}
.navbar{position:relative;z-index:3;display:flex;align-items:center;flex-wrap:wrap;}
label{padding:0 5px 0 0;}
input::-webkit-inner-spin-button{appearance:none;margin:0;}
input[type=number]{width:50px;appearance:textfield;}
.monospace{font-family:monospace;}
.nodisplay{display:none;}
.gallery{display:flex;flex-wrap:wrap;}
.gallery a{margin:3px;display:flex;flex-direction:column;flex-grow:1;text-align:center;}
#map_iframe{position:fixed;top:0px;left:0px;bottom:0px;right:0px;width:100%;height:100%;border:none;margin:0;padding:0;overflow:hidden;}

